--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/plugin-transform-async-to-generator": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/runtime": "^7.14.8",
     "parcel-bundler": "^1.12.5"
   },
   "dependencies": {
     "moment": "^2.29.1"
-  }
+  },
+  "browerslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
